added imgcaption class to css to center image caption. not sure it is a great solution, but it works now

--- a/css/custom.css
+++ b/css/custom.css
@@ -21,6 +21,9 @@
   display: block;
   text-align: center;
   margin: 2.5rem auto 0; }
+.value-imgcaption {
+    display: block;
+    text-align: center; }
 .example-grid .column,
 .example-grid .columns {
   background: #EEE;
